Add unavailable products

--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -37,7 +37,7 @@
         }
 
     </div>
-
+    <partial name="_showAvailableProducts" />
     @if (Model.CategoryModel.CatalogModel.NewCatalogItems.Any())
     {
         <div class="news-heading text-center">
