--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -46,7 +46,7 @@
         </div>
     </div>
 }
-
+<partial name="_showAvailableProducts" />
 @if (Model.CatalogModel.NewCatalogItems.Any())
 {
     <div class="news-heading text-center mt-3 mt-sm-5">
