--- a/src/Web/DamaWeb/Pages/Search/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Search/Index.cshtml
@@ -27,6 +27,7 @@
             </form>
         </div>
     </section>*@
+<partial name="_showAvailableProducts" />
 <div class="container">
     @if (Model.CatalogModel.CatalogItems.Any())
     {
