--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -12,7 +12,7 @@
     <h2 class="lily">Todos os Produtos</h2>
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
-
+<partial name="_showAvailableProducts" />
 <div class="container">
     @if (Model.CatalogTypeModel.CatalogModel.CatalogItems.Any())
     {
