--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="news-heading text-center">
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
-
+<partial name="_showAvailableProducts" />
 <div class="container mt-3">
     <div class="esh-catalog-items row">
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
