--- a/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Editar</h2>
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" for="StatusMessage" />
 <h4>Tipo de Produto</h4>
 <hr />
 <div class="row">
