--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -57,10 +57,10 @@
                     <li>
                         <a href="https://backoffice.saborcomtradicao.com" target="_blank">
                             Sabor com Tradição <span class="caret"></span>
-                        </a>                       
+                        </a>
                     </li>
                 </ul>
-                @await Html.PartialAsync("_LoginPartial")
+                <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
