--- a/src/Web/DamaWeb/Pages/Account/Manage/ChangePassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Mudar password";
 }
 <h1 class="text-uppercase">@ViewData["Title"]</h1>
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" for="StatusMessage" />
 <div class="row justify-content-center">
     <div class="col-md-4">
         <form method="post">
