--- a/src/Web/DamaWeb/Pages/Account/Manage/SetPassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Manage/SetPassword.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1 class="text-uppercase">Define a sua password</h1>
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" for="StatusMessage" />
 <p class="text-info">
     Você não tem uma conta username/password neste site. Adicione uma conta local para fazer login.
 </p>
