--- a/src/Web/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Orders/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Detalhe";
 }
 <h2>Encomenda nº @Model.OrderModel.Id</h2>
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" for="StatusMessage" />
 <div>
     <hr />
     <dl class="dl-horizontal">
