Hide Delivery on Shop Option

--- a/src/Web/DamaWeb/Pages/Basket/CheckoutStep2.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/CheckoutStep2.cshtml
@@ -15,7 +15,7 @@
                                id="DeliveryMethodType@HOME" class="custom-control-input">
                         <label class="custom-control-label" for="DeliveryMethodType@HOME">NA TUA MORADA</label>
                     </div>
-                    <div class="custom-control custom-radio custom-control-inline mt-2">
+                    <div class="custom-control custom-radio custom-control-inline mt-2 sr-only">
                         <input type="radio" asp-for="DeliveryMethod" value="@ApplicationCore.Entities.DeliveryMethodType.STORE"
                                id="DeliveryMethodType@STORE" class="custom-control-input">
                         <label class="custom-control-label" for="DeliveryMethodType@STORE">NA NOSSA LOJA EM LOULÉ</label>
