--- a/src/Web/Backoffice/Pages/Products/Index.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.DisplayNameFor(model => model.ProductModel[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductModel[0].CatalogCategories)
+                @Html.DisplayNameFor(model => model.ProductModel[0].Categories)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductModel[0].Price)
@@ -51,7 +51,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @foreach (var cat in item.CatalogCategories)
+                    @foreach (var cat in item.Categories)
                     {
                         @cat.Label
                         <br />
