--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -120,7 +120,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.ProductModel.CatalogReferences)
+                    @foreach (var item in Model.ProductModel.References)
                     {
                         <tr>
                             <td>
@@ -153,36 +153,36 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
+                            @Html.DisplayNameFor(model => model.ProductModel.Attributes[0].Type)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
+                            @Html.DisplayNameFor(model => model.ProductModel.Attributes[0].Name)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Stock)
+                            @Html.DisplayNameFor(model => model.ProductModel.Attributes[0].Stock)
                         </th>
                         <th>
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    @if (Model.ProductModel?.CatalogAttributes?.Count > 0)
+                    @if (Model.ProductModel?.Attributes?.Count > 0)
                     {
-                        for (int i = 0; i < Model.ProductModel.CatalogAttributes.Count; i++)
+                        for (int i = 0; i < Model.ProductModel.Attributes.Count; i++)
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Type)
+                                    @Html.DisplayFor(model => Model.ProductModel.Attributes[i].Type)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Name)
+                                    @Html.DisplayFor(model => Model.ProductModel.Attributes[i].Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Stock)
+                                    @Html.DisplayFor(model => Model.ProductModel.Attributes[i].Stock)
                                 </td>
                                 <td>
-                                    <a asp-page="./Attributes/Edit" asp-route-id="@Model.ProductModel.CatalogAttributes[i].Id">Editar</a> |
-                                    <a asp-page="./Attributes/Delete" asp-route-id="@Model.ProductModel.CatalogAttributes[i].Id">Apagar</a>
+                                    <a asp-page="./Attributes/Edit" asp-route-id="@Model.ProductModel.Attributes[i].Id">Editar</a> |
+                                    <a asp-page="./Attributes/Delete" asp-route-id="@Model.ProductModel.Attributes[i].Id">Apagar</a>
                                 </td>
                             </tr>
                         }
@@ -235,31 +235,31 @@
         <div class="col-md-12">
             <hr />
             <h4>Imagens do Produto</h4>
-            @for (int i = 0; i < Model.ProductModel.CatalogPictures.Count; i++)
+            @for (int i = 0; i < Model.ProductModel.Pictures.Count; i++)
             {
-                <input type="hidden" asp-for="ProductModel.CatalogPictures[i].Id" />
-                <input type="hidden" asp-for="ProductModel.CatalogPictures[i].CatalogItemId" />
-                <input type="hidden" asp-for="ProductModel.CatalogPictures[i].PictureUri" />
-                <input type="hidden" asp-for="ProductModel.CatalogPictures[i].IsMain" />
+                <input type="hidden" asp-for="ProductModel.Pictures[i].Id" />
+                <input type="hidden" asp-for="ProductModel.Pictures[i].CatalogItemId" />
+                <input type="hidden" asp-for="ProductModel.Pictures[i].PictureUri" />
+                <input type="hidden" asp-for="ProductModel.Pictures[i].IsMain" />
 
                 <div class="col-md-2">
-                    <img src="@Model.ProductModel.CatalogPictures[i].PictureUri" class="img-responsive img-thumbnail" />
+                    <img src="@Model.ProductModel.Pictures[i].PictureUri" class="img-responsive img-thumbnail" />
                     <div class="form-check">
-                        <input asp-for="ProductModel.CatalogPictures[i].IsActive" class="form-check-input" />
-                        <label asp-for="ProductModel.CatalogPictures[i].IsActive" class="form-check-label"></label>
-                        <span asp-validation-for="ProductModel.CatalogPictures[i].IsActive" class="text-danger"></span>
+                        <input asp-for="ProductModel.Pictures[i].IsActive" class="form-check-input" />
+                        <label asp-for="ProductModel.Pictures[i].IsActive" class="form-check-label"></label>
+                        <span asp-validation-for="ProductModel.Pictures[i].IsActive" class="text-danger"></span>
                     </div>
                     <div class="form-group row">
-                        <label asp-for="ProductModel.CatalogPictures[i].Order" class="col-md-3 control-label"></label>
+                        <label asp-for="ProductModel.Pictures[i].Order" class="col-md-3 control-label"></label>
                         <div class="col-md-4">
-                            <input asp-for="ProductModel.CatalogPictures[i].Order" class="form-control" />
-                            <span asp-validation-for="ProductModel.CatalogPictures[i].Order" class="text-danger"></span>
+                            <input asp-for="ProductModel.Pictures[i].Order" class="form-control" />
+                            <span asp-validation-for="ProductModel.Pictures[i].Order" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row">
                         @*<button class="btnChangeImage btn btn-default">Substituir</button>*@
                         <button class="btnRemoveImage btn btn-danger">Remover</button>                        
-                        <input type="hidden" asp-for="ProductModel.CatalogPictures[i].ToRemove" class="img-to-remove" />
+                        <input type="hidden" asp-for="ProductModel.Pictures[i].ToRemove" class="img-to-remove" />
                         <p class="alert" role="alert"></p>
                     </div>
                 </div>
