--- a/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
@@ -33,6 +33,7 @@
     </dl>
     
     <form method="post">
+        <input type="hidden" asp-for="CatalogAttributeModel.CatalogItemId" />
         <input type="hidden" asp-for="CatalogAttributeModel.Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-page="/Products/Edit" asp-route-id="@Model.CatalogAttributeModel.CatalogItemId">Voltar</a>
