--- a/src/Web/DamaAdmin/_Imports.razor
+++ b/src/Web/DamaAdmin/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,5 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using DamaAdmin.Client
-@using DamaAdmin.Client.Shared
+@using DamaAdmin
+@using DamaAdmin.Shared
