Blazor Admin Index Page

--- a/src/Web/DamaAdmin/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Pages/Index.razor
@@ -1,8 +1,26 @@
 ﻿@page "/"
 @attribute [Authorize]
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="row">
+    <div class="col-md-12">
+        <img src="/images/dama_backoffice.jpg" width="100%" alt="Dama Backoffice" />
+    </div>
+</div>
+<div class="row mt-2">
+    <div class="col-md-12">
+        <div class="card-deck">
+            <div class="card" style="width: 18rem;">
+                <img src="/images/category.jpg" class="card-img-top" alt="Categorias">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="/images/productType.jpg" class="card-img-top" alt="Tipos de Produto">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="/images/illustration.jpg" class="card-img-top" alt="Ilustrações">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="/images/product.jpg" class="card-img-top" alt="Produtos">
+            </div>
+        </div>
+    </div>
+</div>
