--- a/src/Web/DamaAdmin/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">DamaAdmin</a>
+    <a class="navbar-brand" href="">Dama Backoffice</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,13 +13,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="categories">
+                <span class="oi oi-plus" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="product-types">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Tipos de Produtos
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="illustrations">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ilustrações
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Produtos
             </NavLink>
         </li>
     </ul>
