Blazor Wasm Admin with AAD

--- a/src/Web/DamaAdmin/Client/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Index.razor
@@ -10,7 +10,9 @@
     <div class="col-md-12">
         <div class="card-deck">
             <div class="card" style="width: 18rem;">
-                <img src="/images/category.jpg" class="card-img-top" alt="Categorias">
+                <a href="/categories">
+                    <img src="/images/category.jpg" class="card-img-top" alt="Categorias">
+                </a>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/productType.jpg" class="card-img-top" alt="Tipos de Produto">
