--- a/src/Web/DamaAdmin/Client/Shared/MainLayout.razor
+++ b/src/Web/DamaAdmin/Client/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -8,6 +8,7 @@
     <div class="main">
         <div class="top-row px-4 auth">
             <LoginDisplay />
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
         <div class="content px-4">
