--- a/src/Web/DamaAdmin/Client/Shared/RedirectToLogin.razor
+++ b/src/Web/DamaAdmin/Client/Shared/RedirectToLogin.razor
@@ -1,4 +1,4 @@
-@inject NavigationManager Navigation
+﻿@inject NavigationManager Navigation
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @code {
     protected override void OnInitialized()
