--- a/src/Web/DamaAdmin/Client/_Imports.razor
+++ b/src/Web/DamaAdmin/Client/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using DamaAdmin
-@using DamaAdmin.Shared
+@using DamaAdmin.Client
+@using DamaAdmin.Client.Shared
