--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
     <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block">
         <div class="container align-items-end">
             <a asp-page="/Index" class="navbar-brand">
-                <img src="~/images/logo_dama150.png" alt="Dama no Jornal" />
+                <img src="~/images/logo_dama_outlet150.png" alt="Dama no Jornal Outlet" />
             </a>
             <ul class="navbar-nav mr-auto dama-header-link">
                 <li class="nav-item">
@@ -223,7 +223,9 @@
             <article class="row justify-content-center">
                 <section class="col-lg-3 order-3 order-lg-1">
                     <div class="text-center">
-                        <a asp-page="/Index" class="d-none d-lg-block" alt="Dama no Jornal" title="Dama no Jornal"><img src="~/images/logo_name_transparent170.png" /></a>
+                        <a asp-page="/Index" class="d-none d-lg-block" alt="Dama no Jornal" title="Dama no Jornal">
+                            <img src="~/images/logo_dama_outlet_vertical190.png" title="Dama no Jornal Outlet"/>
+                        </a>
                         <div id="footer-social" class="mt-3">
                             <span class="text-white">SEGUE-NOS:</span>
                             <div class="row justify-content-center mt-2">
