--- a/src/Web/DamaWeb/Pages/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/_productDetail.cshtml
@@ -91,7 +91,7 @@
             <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR AO CARRINHO" />
             @if (Model.CanCustomize)
             {
-                <a id="btnCustomize" class="btn btn-outline-pink ml-2 mt-2 w-100" role="button" data-toggle="collapse" href="#customizeSection">AQUI PODES PERSONALIZAR</a>
+                @* <a id="btnCustomize" class="btn btn-outline-pink ml-2 mt-2 w-100" role="button" data-toggle="collapse" href="#customizeSection">AQUI PODES PERSONALIZAR</a> *@
             }
         </div>
         <small id="txtDeliveryStockTime" class="text-muted dama-small-text my-3">Tempo de entrega entre 2 a 3 dias úteis para produtos em stock.</small>
