Novo Banner para Mobile

--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a asp-page="/Index" class="navbar-brand d-flex d-lg-none">
-                <img src="~/images/brand_full.png" alt="Dama no Jornal" />
+                <img src="~/images/logo_dama_outlet150.png" alt="Dama no Jornal Outlet" width="125" />
             </a>
             <a class="nav-link order-6 order-lg-1" data-toggle="collapse" href="#searchcollapse"><i
                     class="fas fa-search fa-lg"></i></a>
