Mostrar apenas banner outlet nas paginas dos produtos

--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -8,7 +8,11 @@
     }
 }
 
-<h1 class="title">@Model.CategoryModel.CategoryName</h1>
+<a href="https://www.damanojornal.com/outlet/">
+    <img src="~/images/banner-outlet.png" title="Dama no Jornal Outlet" class="img-fluid" />
+</a>
+
+<h1 class="title mt-3">@Model.CategoryModel.CategoryName</h1>
 
 @if (Model.CategoryModel.CatalogModel != null)
 {
