--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -6,7 +6,11 @@
         ViewBag.NoIndex = true;
     }
 }
-<h1 class="title">@Model.CatalogTypeModel.Name</h1>
+<a href="https://www.damanojornal.com/outlet/">
+    <img src="~/images/banner-outlet.png" title="Dama no Jornal Outlet" class="img-fluid" />
+</a>
+
+<h1 class="title mt-3">@Model.CatalogTypeModel.Name</h1>
 
 <div id="todos" class="news-heading text-center">
     <h2 class="lily">Todos os Produtos</h2>
