--- a/src/Web/DamaWeb/Pages/Product.cshtml
+++ b/src/Web/DamaWeb/Pages/Product.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model DamaWeb.Pages.ProductModel
 
+<a href="https://www.damanojornal.com/outlet/">
+    <img src="~/images/banner-outlet.png" title="Dama no Jornal Outlet" class="img-fluid" />
+</a>
+
 <div class="row mt-md-5">
     <div class="col-md-7">
         <div class="row align-items-center">
