Show Discount on BO

--- a/src/Web/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Orders/Details.cshtml
@@ -69,6 +69,12 @@
             @Html.DisplayFor(model => model.OrderModel.BillingToAddress)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.OrderModel.Discount)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.OrderModel.Discount)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.OrderModel.ShippingCost)
         </dt>
         <dd>
