--- a/src/Web/DamaAdmin/Client/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Index.razor
@@ -10,7 +10,7 @@
     <div class="col-md-12">
         <div class="card-deck">
             <div class="card" style="width: 18rem;">
-                <a href="/categories">
+                <a href="/categorias">
                     <img src="/images/category.jpg" class="card-img-top" alt="Categorias">
                 </a>
             </div>
