--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/categories">
+            <NavLink class="nav-link" href="/categorias">
                 <span class="oi oi-plus" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
