--- a/src/Web/DamaAdmin/Client/wwwroot/css/app.css
+++ b/src/Web/DamaAdmin/Client/wwwroot/css/app.css
@@ -48,3 +48,8 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.form-group.required label:after {
+    content: "*";
+    color: red;
+}
