--- a/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
@@ -39,9 +39,6 @@ else
                 <th>
                     Titulo
                 </th>
-                <th>
-                    Nº Tipos de Produtos
-                </th>
                 <th></th>
             </tr>
         </thead>
@@ -65,89 +62,30 @@ else
                         @item.Title
                     </td>
                     <td>
-                        <a href="/categorias/@item.Id">Editar</a> |
-                        <a href="#" data-target="#modal_category_@item.Id" data-toggle="modal">Detalhes</a> |
-                        <a href="#">Remover</a>
-                        <div class="modal" id="modal_category_@item.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">@item.Name</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <dl class="dl-horizontal">
-                                            <dt>
-                                                Nome
-                                            </dt>
-                                            <dd>
-                                                @item.Name
-                                            </dd>
-                                            <dt>
-                                                Slug
-                                            </dt>
-                                            <dd>
-                                                @item.Slug
-                                            </dd>
-                                            <dt>
-                                                Ordem
-                                            </dt>
-                                            <dd>
-                                                @item.Order
-                                            </dd>
-                                            <dt>
-                                                Categoria Pai
-                                            </dt>
-                                            <dd>
-                                                @item.Parent?.Name
-                                            </dd>
-                                        </dl>
-                                        <h4>SEO</h4>
-                                        <dl class="dl-horizontal">
-                                            <dt>
-                                                Meta Description
-                                            </dt>
-                                            <dd>
-                                                @item.MetaDescription
-                                            </dd>
-                                            <dt>
-                                                Titulo
-                                            </dt>
-                                            <dd>
-                                                @(string.IsNullOrEmpty(item.Title) ? item.Name : item.Title)
-                                            </dd>
-                                            <dt>
-                                                Texto H1
-                                            </dt>
-                                            <dd>
-                                                @item.H1Text
-                                            </dd>
-                                            <dt>
-                                                Descrição
-                                            </dt>
-                                            <dd>
-                                                @((MarkupString)item.Description)
-                                            </dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
+                        <a href="/categorias/@item.Id" class="btn btn-warning btn-sm" role="button" title="Editar">
+                            <span class="oi oi-pencil" title="Editar" aria-hidden="true"></span>
+                        </a>
+                        <button class="btn btn-info btn-sm" @onclick="() => Modal.Open(item.Name, item)">
+                            <span class="oi oi-eye" title="Ver" aria-hidden="true"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm">
+                            <span class="oi oi-trash" title="Remover" aria-hidden="true"></span>
+                        </button>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
+    <Modal @ref="Modal"></Modal>
 }
 
 @code {
     private CategoryViewModel[] categories;
+    private Modal Modal { get; set; }
 
     [Parameter]
     public string Message { get; set; }
+
 
     protected override async Task OnInitializedAsync()
     {
