--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/categorias">
-                <span class="oi oi-plus" aria-hidden="true"></span> Categorias
+                <span class="oi oi-grid-three-up" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
         <li class="nav-item px-3">
