WIP Product Types List

--- a/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
+++ b/src/Web/DamaAdmin/Client/Shared/NavMenu.razor
@@ -13,12 +13,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/categorias">
+            <NavLink class="nav-link" href="categorias">
                 <span class="oi oi-grid-three-up" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="product-types">
+            <NavLink class="nav-link" href="tipos-de-produto">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Tipos de Produtos
             </NavLink>
         </li>
